🔗  Updated signin-button.js link to point to my.ghost.org
refs https://github.com/TryGhost/my.ghost.org/pull/264

- The button didn't work before anyway, as it was pointing to the wrong source

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,4 +27,4 @@
     crossorigin="anonymous">
 </script>
 <script type="text/javascript" src="{{ "assets/js/ghost.js" | relative_url }}"></script>
-<script type="text/javascript" src="https://auth.ghost.org/signin-button.js"></script>
+<script type="text/javascript" src="https://my.ghost.org/signin-button.js"></script>
